# tauri-plugin-clubgermes-firebase

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
android/: .gitignore  build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt  MyFirebaseMessagingService.kt  PushNotificationsPlugin.kt  PushNotificationsService.kt  PushNotificationsService.kt.kt
android/src/main/res/values/: strings.xml
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  pnpm-lock.yaml  vite.config.js
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/src/helpers/: notifications-test.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
src/: desktop.rs  lib.rs  mobile.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
