[package]
name = "tauri-plugin-clubgermes-firebase"
version = "0.0.1"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-clubgermes-firebase"

[dependencies]
tauri = { version = "2.0.0-alpha.18" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12" }
